# docopt

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.rst  LICENSE-MIT  MANIFEST.in  Makefile  README  README.md  README.rst  TODO  conftest.py  docopt.py  docopt.pyi  example.py  language_agnostic_tester.py  pyproject.toml  pytest.ini  python-docopt.spec  setup.py  test_docopt.py  test_example.py  testcases.docopt  testee.py  tox.ini
debian/: changelog  control  copyright  install  rules
doc/python-3.2.5/: Test-Plan.md
docs/: Makefile  conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.txt
examples/: any_options_example.py  argparse_example.py  arguments_example.py  calculator_example.py  commands_example.py  config_file_example.py  counted_example.py  delegation_example.py  file_parser_example.py  git_example.py  interactive_example.py  naval_fate.py  odd_even_example.py  option_groups.py  options_example.py  options_shortcut_example.py  quick_example.py  validation_example.py
examples/git/: git.py  git_add.py  git_branch.py  git_checkout.py  git_clone.py  git_commit.py  git_push.py  git_remote.py
language_agnostic_test/: language_agnostic_tester.py
old/: do.py  do2.py  ha.py  t_do.py  t_ha.py
scripts/: linter
tests/: test_arguments.py  test_commands.py  test_errors.py  test_groups.py  test_options.py  test_parsing.py  test_shortcuts.py  test_stress.py  test_usage_sections.py  util.py
